<resources>
    <string name="app_name">TodoV2App</string>
    <string name="context_menu">Hold task to show context</string>
    <string name="prio_high">High</string>
    <string name="prio_medium">Medium</string>
    <string name="prio_low">Low</string>

    <string name="lbl_show">Show details</string>
    <string name="lbl_delete">Delete task</string>
    <string name="lbl_totop">Move task to top</string>
    <string name="lbl_toend">Move task to button</string>
    <string name="lbl_prioritize">Prioritize</string>
    <string name="lbl_showdetails">Show Details</string>

</resources>