<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"  xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/deleteItem"
        android:orderInCategory="900"
        android:title="@string/lbl_delete"
        android:showAsAction="never" />
    <item
        android:id="@+id/toTopItem"
        android:orderInCategory="1000"
        android:title="@string/lbl_totop"
        android:showAsAction="never" />
    <item
        android:id="@+id/toEndItem"
        android:orderInCategory="1100"
        android:title="@string/lbl_toend"
        android:showAsAction="never" />

    <item
        android:id="@+id/prioritizeItem"
        android:orderInCategory="800"
        android:title="@string/lbl_prioritize"
        android:showAsAction="always" />
</menu>